--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,11 +6,12 @@
             "command": "C:\\Environment\\msys64\\mingw64\\bin\\gcc.exe",
             "args": [
                 "-fdiagnostics-color=always",
-                "-g",
+                "-static",
                 "csteamrestarter.c",
                 "-o",
-                "${fileDirname}\\CSteamRestarter.exe",
-                "-lintl"
+                "${fileDirname}\\Output\\CSteamRestarter.exe",
+                "-lintl",
+                "-liconv"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -23,6 +24,54 @@
                 "isDefault": true
             },
             "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: clang.exe 生成活动文件（本项目）",
+            "command": "C:\\Environment\\LLVM\\bin\\clang.exe",
+            "args": [
+                "-fcolor-diagnostics",
+                "-fansi-escape-codes",
+                "-IC:\\Environment\\GnuWin32\\include",
+                "-LC:\\Environment\\GnuWin32\\lib",
+                "-g",
+                "csteamrestarter.c",
+                "-o",
+                "${fileDirname}\\Output\\CSteamRestarter.exe",
+                "-lintl"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "编译器: C:\\Environment\\LLVM\\bin\\clang.exe"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: cl.exe 生成活动文件（本项目）",
+            "command": "cl.exe",
+            "args": [
+                "/Zi",
+                "/EHsc",
+                "/nologo",
+                "/IC:\\Environment\\GnuWin32\\include",
+                "/link",
+                "/LIBPATH:C:\\Environment\\GnuWin32\\lib\\libintl.lib",
+                "-lintl",
+                "/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "${file}",
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$msCompile"
+            ],
+            "group": "build",
+            "detail": "编译器: cl.exe"
         }
     ],
     "version": "2.0.0"
