--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,12 +9,10 @@
                 "-static",
                 "csteamrestarter.c",
                 "-o",
-                "${fileDirname}\\Output\\CSteamRestarter.exe",
-                "-lintl",
-                "-liconv"
+                "${workspaceFolder}\\Output\\CSteamRestarter.exe"
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": [
                 "$gcc"
@@ -27,45 +25,18 @@
         },
         {
             "type": "cppbuild",
-            "label": "C/C++: clang.exe 生成活动文件（本项目）",
-            "command": "C:\\Environment\\LLVM\\bin\\clang.exe",
-            "args": [
-                "-fcolor-diagnostics",
-                "-fansi-escape-codes",
-                "-IC:\\Environment\\GnuWin32\\include",
-                "-LC:\\Environment\\GnuWin32\\lib",
-                "-g",
-                "csteamrestarter.c",
-                "-o",
-                "${fileDirname}\\Output\\CSteamRestarter.exe",
-                "-lintl"
-            ],
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": "build",
-            "detail": "编译器: C:\\Environment\\LLVM\\bin\\clang.exe"
-        },
-        {
-            "type": "cppbuild",
             "label": "C/C++: cl.exe 生成活动文件（本项目）",
             "command": "cl.exe",
             "args": [
                 "/Zi",
                 "/EHsc",
                 "/nologo",
-                "/IC:\\Environment\\GnuWin32\\include",
-                "/link",
-                "/LIBPATH:C:\\Environment\\GnuWin32\\lib\\libintl.lib",
-                "-lintl",
-                "/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
-                "${file}",
+                "/Fe${workspaceFolder}\\Output\\CSteamRestarter.exe",
+                "/MT",
+                "csteamrestarter.c"
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": [
                 "$msCompile"
