--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,38 +2,19 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc.exe 生成活动文件（本项目）",
-            "command": "C:\\Environment\\msys64\\mingw64\\bin\\gcc.exe",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-static",
-                "csteamrestarter.c",
-                "-o",
-                "${workspaceFolder}\\Output\\CSteamRestarter.exe"
-            ],
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "调试器生成的任务。"
-        },
-        {
-            "type": "cppbuild",
             "label": "C/C++: cl.exe 生成活动文件（本项目）",
             "command": "cl.exe",
             "args": [
                 "/Zi",
                 "/EHsc",
                 "/nologo",
-                "/Fe${workspaceFolder}\\Output\\CSteamRestarter.exe",
+                "/FeOutput\\CSteamRestarter.exe",
                 "/MT",
-                "csteamrestarter.c"
+                "csteamrestarter.c",
+                "-I",
+                "C:\\Environment\\GnuWin32\\include",
+                "-link",
+                "C:\\Environment\\GnuWin32\\lib\\libintl.lib"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -43,6 +24,28 @@
             ],
             "group": "build",
             "detail": "编译器: cl.exe"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: gcc.exe 生成活动文件（本项目）",
+            "command": "gcc.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-static",
+                "csteamrestarter.c",
+                "-o",
+                "Output\\CSteamRestarter.exe",
+                "-lintl",
+                "-liconv"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "编译器: gcc.exe"
         }
     ],
     "version": "2.0.0"
